--- a/templates/layouts/sidebar.html
+++ b/templates/layouts/sidebar.html
@@ -7,6 +7,10 @@
             <div class="category-content no-padding">
                 <ul class="navigation navigation-main navigation-accordion">
                     <!-- Main -->
+                        <li><a href="{% url 'webclient:facturas' %}">
+                            <i class="icon-file-spreadsheet"></i>Facturas</a>
+                        </li>
+
 
                     <!-- /main -->
                 </ul>
@@ -20,12 +24,12 @@
                 <div class="media">
                     <!--<a href="#" class="media-left"><img src="{% static 'assets' %}/images/image.png" class="img-circle img-sm" alt=""></a>-->
                     <div class="media-body">
-                        <span class="media-heading text-semibold">Jose Ramirez</span>
+                        <span class="media-heading text-semibold">Frank Soto</span>
                         <div class="text-size-mini text-muted">
                             <i class="fa fa-sitemap"></i> &nbsp;Administrador
                         </div>
                         <div class="text-size-mini text-muted">
-                            <i class="fa fa-calendar"></i> &nbsp;2016/12/13 00:00:00
+                            <i class="fa fa-calendar"></i> &nbsp;2018/07/20 00:00:00
                         </div>
                     </div>
                 </div>
