--- a/templates/layouts/sidebar.html
+++ b/templates/layouts/sidebar.html
@@ -1,47 +1,36 @@
 {% load  staticfiles %}
+{% load mptt_tags %}
 <!-- Main sidebar -->
-<div class="sidebar sidebar-main bg-slate-800">
+<div class="sidebar sidebar-main ">
     <div class="sidebar-content">
         <!-- Main navigation -->
-        <div class="sidebar-category sidebar-category-visible">
-            <div class="category-content no-padding">
-                <ul class="navigation navigation-main navigation-accordion">
-                    <!-- Main -->
-                        <li><a href="{% url 'facturacion:facturas' %}">
-                            <i class="icon-file-spreadsheet"></i>Facturas</a>
-                        </li>
-                        <li><a href="{% url 'facturacion:boletas' %}">
-                            <i class="icon-file-xml"></i>Boletas</a>
-                        </li>
-                        <li><a href="{% url 'facturacion:notas-credito' %}">
-                            <i class="icon-file-spreadsheet2"></i>Notas Credito</a>
-                        </li>
-                        <li><a href="{% url 'facturacion:consultar-comprobantes' %}">
-                            <i class="icon-search4"></i>Consulta Cliente</a>
-                        </li>
-                    <!-- /main -->
-                </ul>
-            </div>
-        </div>
+      					<div class="sidebar-category sidebar-category-visible">
+						<div class="category-content no-padding">
+							<ul class="navigation navigation-main navigation-accordion">
+
+								<!-- Main -->
+								<li class="navigation-header"><span>Main</span> <i class="icon-menu" title="Main pages"></i></li>
+								<li><a href="index.html"><i class="icon-home4"></i> <span>Dashboard</span></a></li>
+								{% recursetree menu_page.website %}
+                                <li><a href="index.html"><i class="{{ node.icono }}"></i> <span>{{ node.descripcion }}</span></a>
+                                    <ul>
+                                          {% if not node.is_leaf_node %}
+                                            {% for hijo,structure in menu_page.website|tree_info:"ancestors" %}
+                                                 {% if hijo.is_child_node and structure.ancestors|tree_path == node.descripcion %}
+                                                     <li><a  href="/{{ node.slug }}/{{ hijo.slug }}/">{{ hijo }}</a></li>
+                                                 {% endif %}
+                                             {% endfor %}
+                                          {% endif %}
+                                    </ul>
+                                {% endrecursetree %}
+								</li>
+                            </ul>
+                        </div>
+                        </div>
         <!-- /main navigation -->
 
         <!-- User menu -->
-        <div class="sidebar-user">
-            <div class="category-content">
-                <div class="media">
-                    <!--<a href="#" class="media-left"><img src="{% static 'assets' %}/images/image.png" class="img-circle img-sm" alt=""></a>-->
-                    <div class="media-body">
-                        <span class="media-heading text-semibold">Frank Soto</span>
-                        <div class="text-size-mini text-muted">
-                            <i class="fa fa-sitemap"></i> &nbsp;Administrador
-                        </div>
-                        <div class="text-size-mini text-muted">
-                            <i class="fa fa-calendar"></i> &nbsp;2018/07/20 00:00:00
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+
         <!-- /user menu -->
     </div>
 </div>
