hasta la parte de resumenes

--- a/templates/base.html
+++ b/templates/base.html
@@ -85,8 +85,8 @@
         App.csrf_token = $.trim($("#csrf_token").find('input').val());
 
         App.locale= {
-         //format: 'DD/MM/YYYY',
-         format: 'YYYY-MM-DD',
+         format: 'DD/MM/YYYY',
+         //format: 'YYYY-MM-DD',
          monthNames: ['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', 'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre'],
          monthNamesShort: ['Ene', 'Feb', 'Mar', 'Abr', 'May', 'Jun', 'Jul', 'Ago', 'Sep', 'Oct', 'Nov', 'Dic'],
          daysOfWeek: ['Domingo', 'Lunes', 'Martes', 'Miércoles', 'Jueves', 'Viernes', 'Sábado'],
