--- a/templates/facturacion/boletas.html
+++ b/templates/facturacion/boletas.html
@@ -165,6 +165,7 @@
 
                 </div>
                 <div class="modal-footer ">
+                    <button type="button" class="btn btn-primary"  id="enviar_correo"><li class="fa fa-glyphicon-envelope"> ENVIAR CORREO</li> </button>
                     <button type="button" class="btn btn-primary"  id="descargar_pdf"><li class="fa fa-file-pdf-o"> DESCARGAR PDF</li> </button>
                     <!--<button type="button" class="btn bg-info"  id="descargar_xml"><li class="fa fa-file-text"> DESCARGAR XML</li> </button>-->
                     <button type="button" class="btn btn-danger" data-dismiss="modal">CANCELAR<li class="icon-close2"> </li> </button>
