--- a/templates/pdf/nota_credito.html
+++ b/templates/pdf/nota_credito.html
@@ -108,7 +108,7 @@
                 <td >{{d.cod_item}}</td>
                 <td >{{d.nom_item}}</td>
                 <td >{{d.imp_vu_item}}</td>
-                <td >{{d.imp_total_item}}</td>
+                <td >{{d.tvu_item}}</td>
             </tr>
             {% endfor %}
 
@@ -134,7 +134,7 @@
             <tr>
                 <td> </td>
             </tr>
-            Representación impresa de la FACTURA ELECTRONICA. Autorizado mediante resolución 032-005-0000421/SUNAT
+            Representación impresa de la FACTURA ELECTRONICA. Autorizado mediante resolución /SUNAT Consulte la web www.sunat.gob.pe
             </tbody>
 
               </table>
